css/projects.css
.projects__list {
    display: grid;
    gap: 2rem;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    justify-items: center;
    align-items: start;
    max-width: 1500px;
    margin: 0 auto;
}

.project {
    background-color: #fff;
    padding: 1.5rem;
    border: 1px solid #E38327;
    border-radius: 10px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    transition: transform 0.3s ease;
}

.project:hover {
    box-shadow: 0 8px 20px rgba(227, 131, 39, 0.2);
    transform: translateY(-4px);
    transition: all 0.3s ease;
}

.project__name {
    font-size: 1.3rem;
    color: #333;
    margin-bottom: 0.5rem;
}

.project__description {
    font-size: 1rem;
    color: #555;
    margin-bottom: 1rem;
    line-height: 1.5;
}

.project__tech {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
    list-style: none;
    margin-bottom: 1rem;
    padding: 0;
}

.project__tech li {
    background-color: #f5f5f5;
    border: 1px solid #E38327;
    border-radius: 5px;
    padding: 0.3rem 0.6rem;
    font-size: 0.9rem;
    color: #333;
}

.project__tech li:hover {
    background-color: #E38327;
}

.project__tech li:active {
    background-color: #E38327;
    color: #fff;
}

.project__links a {
    margin-right: 1rem;
    color: hsl(29, 77%, 52%);
    text-decoration: none;
    font-weight: bold;
}

.project__links a:hover {
    text-decoration: underline;
}

.project__links a:active {
    color: hsl(29, 77%, 62%);
}

.project__links a:focus {
    outline: 1px solid #E38327;
    box-shadow: 0 0 5px 2px rgba(227, 131, 39, 0.5);
}

.hidden {
    display: none;
}

.projects__button-container {
    display: flex;
    justify-content: flex-end;
    margin-top: 1.5rem;
}

.show-more-btn {
    background-color: #E38327;
    color: #333;
    padding: 0.5rem 1rem;
    border: none;
    border-radius: 25px;
    cursor: pointer;
    transition: background-color 0.3s;
}

.show-more-btn:hover {
    background-color: #d47724;
}

@media (max-width: 470px) {
    .projects__list {
        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    }

    .project {
        padding: 1rem;
    }

    .project__name {
        font-size: 1.2rem;
    }

    .project__description {
        font-size: 0.9rem;
    }

    .project__tech li {
        font-size: 0.8rem;
    }

    .project__links a {
        font-size: 0.9rem;
    }
}

